--- a/style_6.css
+++ b/style_6.css
@@ -388,11 +388,15 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
-    width: 75%;
+    width: 73%;
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(5) .bar span {
     width: 70%;
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(6) .bar span {
+    width: 75%;
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span {
